ghpages/main.css
@keyframes fade {
  0% { opacity: 0 }
  100% { opacity: 1 }
}

.bottom-search-bar {
  border-left: 2px solid #999;
  position: fixed;
  background: rgba(250, 255, 200, 1);
  color: #000;
  padding: 0.8rem;
  font-size: 0.7rem;
  border-top: 2px solid navy;
  /* animation: 0.5s linear fade; */
}

.bottom-search-bar h5 {
  padding-left: 40px;
}

.overflower {
  display: block;
  max-height: 100px;
  overflow: scroll;
}
.bottom-search-bar input { display: inline-block; }
.help { display: inline-block; }

/* If width is more than 800 do this stuff */
@media (min-width: 800px)
{
  .bottom-search-bar {
    top: 0;
    right: 0;
    width: 250px;
    height: 100%;
    /*display: none;*/
  }
}

/* If width is less than 800 do this stuff */
@media (max-width: 800px)
{
  .bottom-search-bar {
    bottom: 0;
    left: 0;
    height: 50px;
    width: 100%;
  }
  .overflower {
    clear: *;
  }
  .dists { display: none; }
  .cmps { display: none; }
  .nays { display: none; }
  .bottom-search-bar h5 { display: none; }
}

.spacer {
  min-height: 300px;
}

.barbutton {
  cursor: pointer;
  margin: 1px;
}

.help:hover {
  height: auto;
}

button {
  background: teal;
  border-radius: 2px;
  color: #fff;
  border: 0;
}

.container {
  display: flex;
  flex-wrap: wrap;
}

h3 {
  clear: both;
}

.mod-entry {
  font-size: 0.7rem;
  display: inline-block;
  width: 170px;
  margin: 20px;
  margin-top: 40px;
  padding: 4px;
  position: relative;
}

.mod-entry img[alt="pic"] {
  vertical-align: bottom;
  valign: bottom;
  height: 40px;
  max-height: auto;
  position: absolute;
  top: -40px;
  left: -30px;
  box-shadow: 3px 3px 4px #000;
  transform: rotate(-15deg);
  -ms-transition: 0.4s ease-in-out;
  -webkit-transition: 0.4s ease-in-out;
  transition: 0.4s ease-in-out;
  z-index: 2;
}

.mod-entry img[alt="pic"]:hover {
  height: auto;
  transform: rotate(0);
  top: -70px;
  left: -30px;
  z-index: 3;
}

.mod-entry p {
  margin: 2px;
  text-align: justify;
}

